Updates to build on mac. Added a cube rotate to T_01; modified T_01 colors

--- a/Tutorial_00/Makefile
+++ b/Tutorial_00/Makefile
@@ -1,8 +1,11 @@
+GPP=g++-13
+
 OPENGLLIB= -lGL
 GLEWLIB= -lGLEW
 GLFWLIB = -lglfw
 LIBS=$(OPENGLLIB) $(GLEWLIB) $(GLFWLIB)
-LDFLAGS=-L/usr/local/lib 
+#LDFLAGS=-L/usr/local/lib
+LDFLAGS=-L/usr/local/lib -L/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries
 CPPFLAGS=-I/usr/local/include
 
 BIN=00_glInit
@@ -13,7 +16,7 @@ all: $(BIN)
 
 
 $(BIN): $(SRCS) $(INCLUDES)
-	g++ $(CPPFLAGS) $(SRCS) -o $(BIN) $(LDFLAGS) $(LIBS)
+	$(GPP) $(CPPFLAGS) $(SRCS) -o $(BIN) $(LDFLAGS) $(LIBS)
 
 clean:
 	rm -f *~ *.o $(BIN)
