--- a/Tutorial_02/Makefile
+++ b/Tutorial_02/Makefile
@@ -1,10 +1,11 @@
-CC=g++
+GPP=g++-13
 
 OPENGLLIB= -lGL
 GLEWLIB= -lGLEW
 GLFWLIB = -lglfw
 LIBS=$(OPENGLLIB) $(GLEWLIB) $(GLFWLIB)
-LDFLAGS=-L/usr/local/lib 
+#LDFLAGS=-L/usr/local/lib
+LDFLAGS=-L/usr/local/lib -L/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/System/Library/Frameworks/OpenGL.framework/Versions/A/Libraries
 CPPFLAGS=-I/usr/local/include -I./
 
 BIN=02_colorcube
@@ -14,7 +15,7 @@ INCLUDES=gl_framework.hpp shader_util.hpp 02_colorcube.hpp
 all: $(BIN)
 
 $(BIN): $(SRCS) $(INCLUDES)
-	g++ $(CPPFLAGS) $(SRCS) -o $(BIN) $(LDFLAGS) $(LIBS)
+	$(GPP) $(CPPFLAGS) $(SRCS) -o $(BIN) $(LDFLAGS) $(LIBS)
 
 clean:
 	rm -f *~ *.o $(BIN)
